--- a/app/views/add.ejs
+++ b/app/views/add.ejs
@@ -14,7 +14,7 @@
     <div class="" id="map" style="width:100%; height:600px; display: none; margin-top: 40px;"></div>
   </div>
 </section>
-<script src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=클라이언트키&submodules=geocoder" charset="utf-8"></script>
+<script src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=88gWD20RtsxD8klxDmdI&submodules=geocoder" charset="utf-8"></script>
 <script type="text/javascript">
 'use strict';
 
