주소로 찾기 완료

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -18,20 +18,23 @@
         <div class="" id="map" style="width: 100%; height: 400px;"></div>
       </div>
     </div>
-    <button id="nearbyme" type="button" class="button is-primary">현재 위치에서 가까운 매장 찾기</button>
+    <button id="nearbyme" type="button" class="button is-primary">가장 가까운 AED</button>
   </div>
 </section>
 
 
-<script src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=88gWD20RtsxD8klxDmdI" charset="utf-8"></script>
+<script src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=88gWD20RtsxD8klxDmdI&submodules=geocoder" charset="utf-8"></script>
 <script type="text/javascript">
-var map = new naver.maps.Map("map", { // 등록된 좌표를 본점으로 가정한 map 세팅
-  center: new naver.maps.LatLng(37.497823, 127.0285636),
-  zoom: 10,
-  mapTypeControl: true
+var map = new naver.maps.Map("map", {
+    center: new naver.maps.LatLng(37.3595316, 127.1052133),
+    zoom: 10,
+    mapTypeControl: true
 });
 
-var infowindow = new naver.maps.InfoWindow(); // 지도 화면 객체
+var infowindow = new naver.maps.InfoWindow({
+    anchorSkew: true
+});
+
 
 function defaultLocation() {
   var marker = new naver.maps.Marker({ // 마커
@@ -52,8 +55,8 @@ function searchAddressToCoordinate(address) {
         var item = response.result.items[0],
             addrType = item.isRoadAddress ? '[도로명 주소]' : '[지번 주소]',
             point = new naver.maps.Point(item.point.x, item.point.y);
-
-        infoWindow.setContent([
+            console.log(point);
+        infowindow.setContent([
                 '<div style="padding:10px;min-width:200px;line-height:150%;">',
                 '<h4 style="margin-top:5px;">검색 주소 : '+ response.result.userquery +'</h4><br />',
                 addrType +' '+ item.address +'<br />',
@@ -61,11 +64,11 @@ function searchAddressToCoordinate(address) {
                 '</div>'
             ].join('\n'));
 
-
         map.setCenter(point);
-        infoWindow.open(map, point);
+        infowindow.open(map, point);
     });
 }
+
 function menuLocation(title, position) {
   var coords = position.split(',');
   var location = new naver.maps.LatLng(coords[1], coords[0]);
