--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -15,7 +15,7 @@
     <div class="hero-body">
       <div class="container">
         <h1 class="title">
-          <%=title%>
+          AED 위치 검색기
         </h1>
       </div>
     </div>
