--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -5,13 +5,15 @@
   <meta name="viewport" content="width=device-width">
   <title><%- title %></title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.0/css/bulma.min.css">
+  <link rel="stylesheet" href="/css/style.css">
   <% if (ENV_DEVELOPMENT) { %>
     <script src="http://localhost:35729/livereload.js"></script>
   <% } %>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" charset="utf-8"></script>
+
 </head>
 <body>
-  <section class="hero is-primary">
+  <section class="hero is-success">
     <div class="hero-body">
       <div class="container">
         <h1 class="title">
