--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,31 +1,21 @@
 <% include header %>
-<section class="section">
-  <div class="container">
-    <div class="columns">
-      <div class="column">
-        <aside class="menu">
-          <p class="menu-label">
-            AED 리스트
-          </p>
-          <ul class="menu-list">
-            <%items.forEach(function (item){%>
-              <li><a href="#" location="<%=item.coords%>" title="<%=item.title%>" address="<%=item.address%>"><%=item.title%></a></li>
-            <%});%>
-          </ul>
-        </aside>
-      </div>
 
-      <div class="column is-9">
-        <div class="" id="map" style="width: 100%; height: 400px;"></div>
-        <div class="search" style>
-          <input id="searchaddress" type="text" placeholder="검색할 주소" value="불정로 6">
-          <input id="submit" type="button" value="주소 검색">
+  <aside class="menu">
+    <p class="menu-label">
+        AED 리스트
+    </p>
+      <ul class="menu-list">
+        <%items.forEach(function (item){%>
+        <li><a href="#" location="<%=item.coords%>" title="<%=item.title%>" address="<%=item.address%>"><%=item.title%></a></li>
+        <%});%>
+     </ul>
+  </aside>
+        <div class="row">
+        <div class="col-3"></div>
+        <div class="col-9">
+          <div class="" id="map" style="width: 100%; height: 650px;"></div>
         </div>
-      </div>
-    </div>
     <button id="nearbyme" type="button" class="button is-primary">가장 가까운 AED</button>
-  </div>
-</section>
 
 
 <script src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=88gWD20RtsxD8klxDmdI&submodules=geocoder" charset="utf-8"></script>
