--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,4 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
@@ -7,6 +6,6 @@ a {
   color: #111111;
 }
 
-.menu-list li{
+.menu{
   display:none;
 }
