--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -16,7 +16,6 @@
   <nav class="navbar navbar-light bg-light justify-content-between">
     <a class="navbar-brand">AED-INFO 지도</a>
     <form class="form-inline">
-      <input id ="searchaddress" class="form-control mr-sm-2" type="text" placeholder="검색할 주소" aria-label="Search">
-      <button id = "submit" class="btn btn-outline-success my-2 my-sm-0" type="button">주소 검색</button>
+      <button id="nearbyme" type="button" class="button is-primary">가장 가까운 AED</button>
     </form>
   </nav>
