--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -16,6 +16,6 @@
   <nav class="navbar navbar-light bg-light justify-content-between">
     <a class="navbar-brand">AED-INFO 지도</a>
     <form class="form-inline">
-      <button id="nearbyme" type="button" class="button is-primary">가장 가까운 AED</button>
+      <button id="nearbyme" type="button" class="btn btn-outline-success my-2 my-sm-0">가장 가까운 AED</button>
     </form>
   </nav>
